--- a/style.css
+++ b/style.css
@@ -10735,15 +10735,16 @@ body {
   background-color: #e0dddd;
 }
 
-.logo {
+a.logo {
   font-weight: 700;
   font-size: 18px;
   color: #6070ff;
   margin: 0 24px;
   font-family: "Poppins", sans-serif;
+  margin: 0 0 0 12rem;
 }
 
-.nav-custom {
+a.nav-custom {
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-style: normal;
